Jira Tickets - CD-37
What has been done?
- Code Compilation has now been converted to Piston.
- - This means a lot less security issues
- - Can easily add other languages on now.
- - Added Tests
- - Made some optimizations.